# ley-ar_mcp

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  conftest.py  pyproject.toml  readme.md  test_retriever_debug.py
benchmark/: cases.py  compare.py  run.py
benchmark/snapshots/: baseline_2026-03-07.json
src/ley_ar/: __init__.py  __main__.py  data_manager.py  server.py  utils.py
src/ley_ar/services/: __init__.py  case_analytics.py  document_generator.py  hybrid_retriever.py  intereses.py  juris_search.py  legislation_store.py  modificaciones_service.py  outcome_extractor.py
src/ley_ar/tools/: __init__.py  analizar_caso.py  buscar_articulos.py  calcular_indem.py  calcular_intereses.py  consultar_cct.py  generar_documento.py  jurisprudencia.py  liquidacion_final.py  norma_vigente.py  obtener_fallo.py  verificar_prescrip.py
tests/: test_buscar_articulos.py  test_calcular_indem.py  test_calcular_intereses.py  test_consultar_cct.py  test_input_validation.py  test_jurisprudencia.py  test_liquidacion_final.py  test_norma_vigente.py  test_verificar_prescrip.py  test_verificar_prescrip_plazos.py
