[project]
name = "ley-ar"
version = "0.1.0"
description = "MCP server de legislacion laboral argentina para agentes de IA"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "python-dateutil>=2.8.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.0.0",
]

[project.scripts]
ley-ar = "ley_ar.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ley_ar"]
